Freestyle: Rendered preview crashes when non-primary render layer is selected and disabled. #39941
Closed
opened 2014-04-28 22:17:13 +02:00 by Shinsuke Irie
·
25 comments
No Branch/Tag Specified
main
manifold
npr-prototype
blender-v4.2-release
blender-v3.6-release
blender-v4.4-release
remote-asset-library-monolithic
blender-v4.3-release
temp-sculpt-dyntopo
blender-v3.3-release
brush-assets-project
pr-extensions-tidy-space
blender-v4.0-release
universal-scene-description
blender-v4.1-release
blender-v3.6-temp_wmoss_animrig_public
gpencil-next
blender-projects-basics
sculpt-blender
asset-browser-frontend-split
asset-shelf
blender-v3.5-release
blender-v2.93-release
sculpt-dev
bevelv2
xr-dev
v4.4.1
v4.2.9
v3.6.22
v4.4.0
v4.2.8
v4.2.7
v3.6.21
v4.2.6
v3.6.20
v4.2.5
v3.6.19
v4.3.2
v4.3.1
v4.3.0
v4.2.4
v3.6.18
v4.2.3
v3.6.17
v4.2.2
v3.6.16
v4.2.1
v3.6.15
v4.2.0
v3.6.14
v3.3.21
v3.6.13
v3.3.20
v3.6.12
v3.3.19
v4.1.1
v3.6.11
v3.3.18
v4.1.0
v3.3.17
v3.6.10
v3.6.9
v3.3.16
v3.6.8
v3.6.7
v3.3.14
v4.0.2
v4.0.1
v4.0.0
v3.6.5
v3.3.12
v3.6.4
v3.6.3
v3.3.11
v3.6.2
v3.3.10
v3.6.1
v3.3.9
v3.6.0
v3.3.8
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Asset datablocks, libraries, browser and shelf
Interest
Audio
Interest
Automated Testing
Interest
BlendFile
Interest
Blender Asset Bundle
Interest
Code Documentation
Code comments, Python/RNA API descriptions
Interest
Collada
Interest
Compatibility
Backward and forward compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
FBX I/O related topics
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms & Builds
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
USD
Interest
UV Editing
Interest
Undo
Interest
User Interface
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Wayland windowing on Unix
Interest
Workbench
Interest
glTF
glTF format I/O topics
Interest: X11
Xorg/X11 windowing
Legacy
Asset Browser Project
Archived
Legacy
Blender 2.8 Project
Archived
Legacy
Milestone 1: Basic, Local Asset Browser
Archived
Legacy
OpenGL Error
Archived
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Related to security, see policy: https://developer.blender.org/docs/handbook/bug_reports/vulnerability_reports/
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms & Builds
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
Windows
Platform
macOS
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Archived
Type
Report
Archived
Type
To Do
Milestone
No items
No Milestone
Projects
Clear projects
No project
Assignees
Hoshinova
James-McCarthy-4
Sebastian-Herholz
casey-bianco-davis
gandalf3
Blendify Aaron Carlisle
quantimoney Aditya Y Jeppu
Alaska Alaska
angavrilov Alexander Gavrilov
frogstomp Aleš Jelovčan
amelief Amélie Fondevilla
elubie Andrea Weikert
Andy_Goralczyk Andy Goralczyk
ankitm Ankit Meel
Anthony-Roberts Anthony Roberts
antoniov Antonio Vazquez
aras_p Aras Pranckevicius
Arnd Arnd Marijnissen
bartvdbraak Bart van der Braak
mont29 Bastien Montagne
blender-bot Blender Bot
bnagirniak Bogdan Nagirniak
BClark Brad Clark
brecht Brecht Van Lommel
BrianSavery Brian Savery (AMD)
ideasman42 Campbell Barton
CharlesWardlaw Charles Wardlaw
CharlieJolly Charlie Jolly
Chris_Blackbourn Chris Blackbourn
lateasusual Chris Clyne (Lateasusual)
ChrisLend Christoph Lendenfeld
HobbesOS Cian Jinks
fclem Clément Foucault
cmbasnett Colin Basnett
Kdaf Colin Marmond
dfelinto Dalai Felinto
pioverfour Damien Picard
DanielBystedt Daniel Bystedt
pepe-school-land Daniel Martinez Lara
zanqdo Daniel Salazar
Mets Demeter Dzadik
erik85 Erik Abrahamsson
EAW Evan Wilson
filedescriptor Falk David
fsiddi Francesco Siddi
GaiaClary Gaia Clary
DagerD Georgiy Markelov
mano-wii Germano Cavalcante
zazizizou Habib Gahbiche
HooglyBoogly Hans Goudey
Harley Harley Acheson
weasel Henrik D.
Hjalti Hjalti Hjálmarsson
howardt Howard Trickey
nirved-1 Hristo Gueorguiev
mod_moder Iliya Katushenock
brita Inês Almeida
JacquesLucke Jacques Lucke
Jason-Fielder Jason Fielder
JasonSchleifer Jason schleifer
Jebbly Jeffrey Liu
Jeroen-Bakker Jeroen Bakker
deadpin Jesse Yurkovich
neXyon Joerg Mueller
eliphaz John Kiril Swenson
guitargeek Johnny Matthews
Brainzman Jonas Holzman
JoniMercado Jonatan Mercado
JorgeBernalMartinez Jorge Bernal
JosephEagar Joseph Eagar
JoshuaLeung Joshua Leung
Bone-Studio Juan Gea
jpbouza-4 Juan Pablo Bouza
JulianEisel Julian Eisel
JulienDuroure Julien Duroure
JulienKaspar Julien Kaspar
kevindietrich Kévin Dietrich
lone_noel Leon Schittek
LucianoMunoz Luciano Muñoz Sessarego
LukasStockner Lukas Stockner
LukasTonne Lukas Tönne
LunaRood Luna Rood
MaiLavelle Mai Lavelle
EosFoxx Marion Stalke
Baardaap Martijn Versteegh
scorpion81 Martin Felke
mendio Matias Mendiola
Matt-McLin Matt McLin
MetinSeven Metin Seven
wave Michael B Johnson
Michael-Jones Michael Jones (Apple)
makowalski Michael Kowalski
pragma37 Miguel Pozo
nrupsis Nate Rupsis
jesterking Nathan Letwory
nathanvegdahl Nathan Vegdahl
PrototypeNM1 Nicholas Rishel
nickberckley Nika Kutsniashvili
Sirgienko Nikita Sirgienko
OmarEmaraDev Omar Emara
pablovazquez Pablo Vazquez
PaoloAcampora Paolo Acampora
PascalSchon Pascal Schön
pmoursnv Patrick Mours
muxed-reality Peter Kim
lichtwerk Philipp Oeser
P2design Pierrick PICAUT
PratikPB2123 Pratik Borhade
Limarest Ramil Roosileht
farsthary Raul Fernandez Hernandez
LazyDodo Ray molenkamp
iss Richard Antalik
rjg Robert Guetzkow
salipour Sahar A. Kashi
Sayak-Biswas Sayak Biswas
Sean-Kim Sean Kim
sherholz Sebastian Herholz
sebastian_k Sebastian Koenig
ZedDB Sebastian Parborg
sebbas Sebastián Barschkis
Sergey Sergey Sharybin
IRIEShinsuke Shinsuke Irie
sidd017 Siddhartha Jejurkar
SietseB Sietse Brouwer
SimonThommes Simon Thommes
SonnyCampbell_Unity Sonny Campbell
Stefan_Werner Stefan Werner
Lockal Sv. Lockal
dr.sybren Sybren A. Stüvel
ThomasDinges Thomas Dinges
Ton Ton Roosendaal
BassamKurdali Ursula kurdali
Vasyl-Pidhirskyi Vasyl Pidhirskyi
WannesMalfait Wannes Malfait
wbmoss_dev Wayde Moss
weizhen Weizhen Huang
leesonw William Leeson
xavierh Xavier Hallade
jenkm Yevgeny Makarov
ChengduLittleA YimingWu
gfxcoder jon denning
Clear assignees
No Assignees
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#39941
Reference in New Issue
Block a user
Blocking a user prevents them from interacting with repositories, such as opening or commenting on pull requests or issues. Learn more about blocking a user.
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Ubuntu 14.04 + Geforce GTX670
Blender Version
Official release builds 2.68a, 2.69, 2.70a
Own build
3d9b415
(2014-04-28 16:55)Short description of error
The summary says it all...
Exact steps for others to reproduce the error
Step to reproduce:
Then Blender crashes immediately.
Changed status to: 'Open'
Added subscriber: @IRIEShinsuke
Added subscriber: @mont29
I cannot reproduce this here… Please attach a crashing .blend file, will save us some time.
That's curious, I confirmed this on both Ubuntu and MS-Windows...
Anyway, attached a .blend file (freestyle_crash_deleting_nonprimary_renderlayer.blend).
Pressing Shift+Z on 3D viewport and clicking a checkbox of "RenderLayer.001" should crash Blender.
Thanks for the file, I can confirm it now. :)
For what is worth, here is the bt:
0x0000000002c75e6a in prepare (bmain=0x7fffca57c780, re=0x606e0001e108, srl=0x60200020fd48)
461 for (RenderPass *rpass = (RenderPass *)rl->passes.first; rpass; rpass = rpass->next) {
#0 0x0000000002c75e6a in prepare (bmain=0x7fffca57c780, re=0x606e0001e108, srl=0x60200020fd48)
#1 0x0000000002c76d97 in FRS_do_stroke_rendering (re=0x606e0001e108, srl=0x60200020fd48, render=1)
#4 0x0000000002743046 in render_view3d_startjob (customdata=0x601c0004b7c8, stop=0x602800077dbc, do_update=0x602800077dba, UNUSED_progress=0x602800077dc0)
Thanks all, I confirmed the crash as well on my side.
I believe I found a fix which I need to test a bit more.
I will update the task soon.
This issue was referenced by blender/blender-addons-contrib@182e97a2cd
This issue was referenced by
182e97a2cd
Changed status from 'Open' to: 'Resolved'
Closed by commit
182e97a2cd
.Thanks for the fix, the crash doesn't occur anymore.
However, Freestyle's behavior is still odd.
If non-primary render layer is selected and disabled, Freestyle draws outlines using primary layer's settings. If the primary one is selected and disabled, no outlines are drawn.
Yes, I do see the point. I also felt like the fixed behavior looked odd. But after some thoughts I concluded that everything is consistent.
This is because in that case Blender internally resets the active scene render layer index to zero (i.e., the first in the list of scene render layers; see line 606 of render_result.c in 182e97a). Freestyle then uses the line settings of the first scene render layer.
In that case, because of the aforementioned resetting of the active scene render layer index to zero, Freestyle tries to use the line settings of the first scene render layer and finds it disabled. That is why no outlines are drawn. Even Blender renders everything in the scene no matter how object visibility is specified in scene render layers.
Let us visually document the observations:
Panels (a) and (b) of the attached screen captures show two scene render layers displaying a cube and a sphere, respectively. The outlines of these objects are drawn in different colors specified by individual line settings as shown in the panels.
Panel (c) shows a preview render in the case that the first scene render layer (Cube) is active but disabled. Note that all objects in the scene are rendered regardless of object visibility settings by the scene render layers. Freestyle does not render outlines because the active scene render layer is disabled (no way to choose a line style).
Panel (d) shows the case where the second scene render layer (Sphere) is active but disabled. In this case, Blender uses the first scene render layer as if it is active. Now this active (first) scene render layer is enabled, so that Freestyle uses the line settings specified by the layer.
I found it strange that Blender internally (and silently) resets the active scene render layer when the true active scene render layer is disabled. All the oddity comes from this behavior of Blender, although we don't have much choice in that case (I would say this behavior is a compromise).
It is also remarked that Freestyle rendering is consistent with what is drawn by preview rendering.
Added subscriber: @brecht
Ah, got it. Thanks for the investigation.
I'm now testing an alternative solution as follows:
SCE_LAY_DISABLE flag is ignored if R_SINGLE_LAYER is true. The default render layer is never used for rendered preview, so the previous fix
182e97a2cd
is no longer needed.So far it seems to work but I'm still not sure if further changes are needed...
Changed status from 'Resolved' to: 'Open'
Thanks for the alternative solution, which looks okay to me.
Since this task has already been closed, the new fix may get unattended and lost.
I reopen the task to draw attention of other core Blender developer to it.
Added subscriber: @ideasman42
Hi Brecht and Campbell,
I would appreciate it if either of you could take a look at the alternative fix by @IRIEShinsuke for this task.
This changes behavior, previously it would render the active layer regardless if it is enabled when use single layer is on.
Can't freestyle just follow the same logic as this function? Checking the same flags etc, not sure why the render result code needs to change.
Changed status from 'Open' to: 'Resolved'
Freestyle can follow the same logic thanks to the commit
182e97a2cd
.It looks like that just keeping the logic unchanged is the way to go.
Thank you Brecht for the timely response. And thank you Irie-san for the report and alternative solution.
I re-close the task now.
The behavior change is intentional. I'd like to fix the existing behavior that's confusing and a bit buggy. Currently, if active layer is disabled, the rendered viewport shows all layers for actlay=0, and shows primary layer (or isn't updated) for actlay>0.
If applying my patch, the viewport always shows an active layer regardless of whether it's enabled or disabled.
Ok, I see what you mean. Can you write it like this though, it's quite unusual to use
?:
inside anif()
:Committed
6ec2d72eca
. Thanks!